Adds columns in index and css files.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Animal Shelter</title>
+    <title>Epicodus Animal Shelter</title>
   </head>
   <body>
-
+    <h1>Epicodus Animal Shelter</h1>
+    <h2>lorem ipsum</h2>
+    <div class="column">
+      a
+    </div>
+    <div class="column">
+      b
+    </div>
+    <div class="column">
+      c
+    </div>
+    <div class="column">
+      d
+    </div>
   </body>
 </html>
