Adds styling to columns and images.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <h1>Epicodus Animal Shelter</h1>
     <h2>lorem ipsum</h2>
     <div class="column">
+      <img src="img/rustedspottedcat.jpg">
       a
     </div>
     <div class="column">
+      <img src="img/italiangreyhound.jpg">
       b
     </div>
     <div class="column">
+      <img src="img/lynx.jpeg">
       c
     </div>
     <div class="column">
+      <img src="img/borzoi.jpg">
       d
     </div>
   </body>
