Adds background, font colors and links.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,50 @@
   </head>
   <body>
     <h1>Epicodus Animal Shelter</h1>
-    <h2>lorem ipsum</h2>
+    <h2>adopting a friend or a pal!</h2>
     <div class="column">
       <img src="img/rustedspottedcat.jpg">
-      a
+      <h3>mouse</h3>
+      <h4>rusted spotted cat</h4>
+      <p>
+        enjoys salmon, being outdoors, and clawing out the eyes of friend and foe alike.
+      </p>
+      <p>
+        <a href="/"> adopt here</a>
+      </p>
     </div>
     <div class="column">
       <img src="img/italiangreyhound.jpg">
-      b
+      <h3>yogurt</h3>
+      <h4>italian greyhound</h4>
+      <p>
+        kind, but his physical form is an affront to God.
+      </p>
+      <p>
+        <a href="/"> adopt here</a>
+      </p>
     </div>
     <div class="column">
       <img src="img/lynx.jpeg">
-      c
+      <h3>ears</h3>
+      <h4>lynx</h4>
+      <p>
+        can't hear well (photos are from before accident).
+      </p>
+      <p>
+        <a href="/"> adopt here</a>
+      </p>
     </div>
     <div class="column">
       <img src="img/borzoi.jpg">
-      d
+      <h3>dillweed</h3>
+      <h4>russian wolfhound</h4>
+      <p>
+        snout too big for his head.
+      </p>
+      <p>
+        <a href="/"> adopt here</a>
+      </p>
     </div>
   </body>
 </html>
